<resources>
    <string name="app_name">Quiz App</string>
    <string name="name">Name</string>
    <string name="user_name">Enter Username</string>
    <string name="next_button">NEXT</string>
    <string name="copyright_text">Copyright @mjerwall</string>
    <string name="logout_button">LOGOUT</string>
    <string name="topic_title">Topic</string>
    <string name="questionNum_title"># of Questions</string>
    <string name="topic1_title">World Flag</string>
    <string name="load_button">LOAD</string>
    <string name="previous_button">PREVIOUS</string>
    <string name="topic_button">TOPIC SELECTION</string>

    <string name="q1">Q1: Select the country that has this flag</string>
    <string name="q2">Q2: Select the countries that have these flags</string>
    <string name="q3">Q3: Select the country that has this flag</string>
    <string name="q4">Q4: Select the country that has this flag</string>
    <string name="q5">Q5: Select the countries that have these flags</string>

    <string-array name="num_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
